security-intro/hipstershop/kubernetes-manifests.yaml

# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START istio_security_intro_hipstershop_deployment_emailservice]
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: emailservice
spec:
  template:
    metadata:
      labels:
        app: emailservice
    spec:
      containers:
      - image: gcr.io/google-samples/microservices-demo/emailservice:31df60f
        livenessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:8080
          periodSeconds: 5
        name: server
        ports:
        - containerPort: 8080
        readinessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:8080
          periodSeconds: 5
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
      terminationGracePeriodSeconds: 5
# [END istio_security_intro_hipstershop_deployment_emailservice]
---
# [START istio_security_intro_hipstershop_service_emailservice]
apiVersion: v1
kind: Service
metadata:
  name: emailservice
spec:
  ports:
  - name: grpc
    port: 5000
    targetPort: 8080
  selector:
    app: emailservice
  type: ClusterIP
# [END istio_security_intro_hipstershop_service_emailservice]
---
# [START istio_security_intro_hipstershop_deployment_checkoutservice]
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: checkoutservice
spec:
  template:
    metadata:
      labels:
        app: checkoutservice
    spec:
      containers:
      - env:
        - name: PRODUCT_CATALOG_SERVICE_ADDR
          value: productcatalogservice:3550
        - name: SHIPPING_SERVICE_ADDR
          value: shippingservice:50051
        - name: PAYMENT_SERVICE_ADDR
          value: paymentservice:50051
        - name: EMAIL_SERVICE_ADDR
          value: emailservice:5000
        - name: CURRENCY_SERVICE_ADDR
          value: currencyservice:7000
        - name: CART_SERVICE_ADDR
          value: cartservice.cart.svc.cluster.local:7070
        image: gcr.io/google-samples/microservices-demo/checkoutservice:31df60f
        livenessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:5050
        name: server
        ports:
        - containerPort: 5050
        readinessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:5050
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
# [END istio_security_intro_hipstershop_deployment_checkoutservice]
---
# [START istio_security_intro_hipstershop_service_checkoutservice]
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice
spec:
  ports:
  - name: grpc
    port: 5050
    targetPort: 5050
  selector:
    app: checkoutservice
  type: ClusterIP
# [END istio_security_intro_hipstershop_service_checkoutservice]
---
# [START istio_security_intro_hipstershop_deployment_recommendationservice]
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: recommendationservice
spec:
  template:
    metadata:
      labels:
        app: recommendationservice
    spec:
      containers:
      - env:
        - name: PRODUCT_CATALOG_SERVICE_ADDR
          value: productcatalogservice:3550
        image: gcr.io/google-samples/microservices-demo/recommendationservice:31df60f
        livenessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:8080
          periodSeconds: 5
        name: server
        ports:
        - containerPort: 8080
        readinessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:8080
          periodSeconds: 5
        resources:
          limits:
            cpu: 200m
            memory: 450Mi
          requests:
            cpu: 100m
            memory: 220Mi
      terminationGracePeriodSeconds: 5
# [END istio_security_intro_hipstershop_deployment_recommendationservice]
---
# [START istio_security_intro_hipstershop_service_recommendationservice]
apiVersion: v1
kind: Service
metadata:
  name: recommendationservice
spec:
  ports:
  - name: grpc
    port: 8080
    targetPort: 8080
  selector:
    app: recommendationservice
  type: ClusterIP
# [END istio_security_intro_hipstershop_service_recommendationservice]
---
# [START istio_security_intro_hipstershop_deployment_frontend]
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: frontend
spec:
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - env:
        - name: PRODUCT_CATALOG_SERVICE_ADDR
          value: productcatalogservice:3550
        - name: CURRENCY_SERVICE_ADDR
          value: currencyservice:7000
        - name: CART_SERVICE_ADDR
          value: cartservice.cart.svc.cluster.local:7070
        - name: RECOMMENDATION_SERVICE_ADDR
          value: recommendationservice:8080
        - name: SHIPPING_SERVICE_ADDR
          value: shippingservice:50051
        - name: CHECKOUT_SERVICE_ADDR
          value: checkoutservice:5050
        - name: AD_SERVICE_ADDR
          value: adservice:9555
        image: gcr.io/google-samples/microservices-demo/frontend:31df60f
        name: server
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
# [END istio_security_intro_hipstershop_deployment_frontend]
---
# [START istio_security_intro_hipstershop_service_frontend]
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: frontend
  type: ClusterIP
# [END istio_security_intro_hipstershop_service_frontend]
---
# [START istio_security_intro_hipstershop_deployment_paymentservice]
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: paymentservice
spec:
  template:
    metadata:
      labels:
        app: paymentservice
    spec:
      containers:
      - image: gcr.io/google-samples/microservices-demo/paymentservice:31df60f
        livenessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:50051
        name: server
        ports:
        - containerPort: 50051
        readinessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:50051
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
      terminationGracePeriodSeconds: 5
# [END istio_security_intro_hipstershop_deployment_paymentservice]
---
# [START istio_security_intro_hipstershop_service_paymentservice]
apiVersion: v1
kind: Service
metadata:
  name: paymentservice
spec:
  ports:
  - name: grpc
    port: 50051
    targetPort: 50051
  selector:
    app: paymentservice
  type: ClusterIP
# [END istio_security_intro_hipstershop_service_paymentservice]
---
# [START istio_security_intro_hipstershop_deployment_productcatalogservice]
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: productcatalogservice
spec:
  template:
    metadata:
      labels:
        app: productcatalogservice
        version: v1
    spec:
      containers:
      - image: gcr.io/google-samples/microservices-demo/productcatalogservice:31df60f
        livenessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:3550
        name: server
        ports:
        - containerPort: 3550
        readinessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:3550
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
      terminationGracePeriodSeconds: 5
# [END istio_security_intro_hipstershop_deployment_productcatalogservice]
---
# [START istio_security_intro_hipstershop_service_productcatalogservice]
apiVersion: v1
kind: Service
metadata:
  name: productcatalogservice
spec:
  ports:
  - name: grpc
    port: 3550
    targetPort: 3550
  selector:
    app: productcatalogservice
  type: ClusterIP
# [END istio_security_intro_hipstershop_service_productcatalogservice]
---
# [START istio_security_intro_hipstershop_namespace_cart]
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: cart
  name: cart
# [END istio_security_intro_hipstershop_namespace_cart]
---
# [START istio_security_intro_hipstershop_deployment_cartservice]
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cartservice
  namespace: cart
spec:
  template:
    metadata:
      labels:
        app: cartservice
    spec:
      containers:
      - env:
        - name: REDIS_ADDR
          value: redis-cart:6379
        - name: PORT
          value: '7070'
        - name: LISTEN_ADDR
          value: 0.0.0.0
        image: gcr.io/google-samples/microservices-demo/cartservice:31df60f
        livenessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:7070
          initialDelaySeconds: 15
          periodSeconds: 10
        name: server
        ports:
        - containerPort: 7070
        readinessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:7070
          initialDelaySeconds: 15
        resources:
          limits:
            cpu: 300m
            memory: 128Mi
          requests:
            cpu: 200m
            memory: 64Mi
      terminationGracePeriodSeconds: 5
# [END istio_security_intro_hipstershop_deployment_cartservice]
---
# [START istio_security_intro_hipstershop_service_cartservice]
apiVersion: v1
kind: Service
metadata:
  name: cartservice
  namespace: cart
spec:
  ports:
  - name: grpc
    port: 7070
    targetPort: 7070
  selector:
    app: cartservice
  type: ClusterIP
# [END istio_security_intro_hipstershop_service_cartservice]
---
# [START istio_security_intro_hipstershop_deployment_loadgenerator]
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: loadgenerator
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: loadgenerator
    spec:
      containers:
      - env:
        - name: FRONTEND_ADDR
          value: frontend:80
        - name: USERS
          value: '10'
        image: gcr.io/google-samples/microservices-demo/loadgenerator:31df60f
        name: main
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 300m
            memory: 256Mi
      restartPolicy: Always
      terminationGracePeriodSeconds: 5
# [END istio_security_intro_hipstershop_deployment_loadgenerator]
---
# [START istio_security_intro_hipstershop_deployment_currencyservice]
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: currencyservice
spec:
  template:
    metadata:
      labels:
        app: currencyservice
    spec:
      containers:
      - image: gcr.io/google-samples/microservices-demo/currencyservice:31df60f
        livenessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:7000
        name: server
        ports:
        - containerPort: 7000
          name: grpc
        readinessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:7000
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
      terminationGracePeriodSeconds: 5
# [END istio_security_intro_hipstershop_deployment_currencyservice]
---
# [START istio_security_intro_hipstershop_service_currencyservice]
apiVersion: v1
kind: Service
metadata:
  name: currencyservice
spec:
  ports:
  - name: grpc
    port: 7000
    targetPort: 7000
  selector:
    app: currencyservice
  type: ClusterIP
# [END istio_security_intro_hipstershop_service_currencyservice]
---
# [START istio_security_intro_hipstershop_deployment_shippingservice]
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: shippingservice
spec:
  template:
    metadata:
      labels:
        app: shippingservice
    spec:
      containers:
      - image: gcr.io/google-samples/microservices-demo/shippingservice:31df60f
        livenessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:50051
        name: server
        ports:
        - containerPort: 50051
        readinessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:50051
          periodSeconds: 5
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
# [END istio_security_intro_hipstershop_deployment_shippingservice]
---
# [START istio_security_intro_hipstershop_service_shippingservice]
apiVersion: v1
kind: Service
metadata:
  name: shippingservice
spec:
  ports:
  - name: grpc
    port: 50051
    targetPort: 50051
  selector:
    app: shippingservice
  type: ClusterIP
# [END istio_security_intro_hipstershop_service_shippingservice]
---
# [START istio_security_intro_hipstershop_deployment_redis_cart]
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis-cart
  namespace: cart
spec:
  template:
    metadata:
      labels:
        app: redis-cart
    spec:
      containers:
      - image: redis:alpine
        livenessProbe:
          periodSeconds: 5
          tcpSocket:
            port: 6379
        name: redis
        ports:
        - containerPort: 6379
        readinessProbe:
          periodSeconds: 5
          tcpSocket:
            port: 6379
        resources:
          limits:
            cpu: 125m
            memory: 256Mi
          requests:
            cpu: 70m
            memory: 200Mi
        volumeMounts:
        - mountPath: /data
          name: redis-data
      volumes:
      - emptyDir: {}
        name: redis-data
# [END istio_security_intro_hipstershop_deployment_redis_cart]
---
# [START istio_security_intro_hipstershop_service_redis_cart]
apiVersion: v1
kind: Service
metadata:
  name: redis-cart
  namespace: cart
spec:
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
  selector:
    app: redis-cart
  type: ClusterIP
# [END istio_security_intro_hipstershop_service_redis_cart]
---
# [START istio_security_intro_hipstershop_deployment_adservice]
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: adservice
spec:
  template:
    metadata:
      labels:
        app: adservice
    spec:
      containers:
      - env:
        - name: PORT
          value: '9555'
        image: gcr.io/google-samples/microservices-demo/adservice:31df60f
        livenessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:9555
          initialDelaySeconds: 20
          periodSeconds: 15
        name: server
        ports:
        - containerPort: 9555
        readinessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:9555
          initialDelaySeconds: 20
          periodSeconds: 15
        resources:
          limits:
            cpu: 300m
            memory: 300Mi
          requests:
            cpu: 200m
            memory: 180Mi
      terminationGracePeriodSeconds: 5
# [END istio_security_intro_hipstershop_deployment_adservice]
---
# [START istio_security_intro_hipstershop_service_adservice]
apiVersion: v1
kind: Service
metadata:
  name: adservice
spec:
  ports:
  - name: grpc
    port: 9555
    targetPort: 9555
  selector:
    app: adservice
  type: ClusterIP
# [END istio_security_intro_hipstershop_service_adservice]
---
